Closed Bug 1730312 Opened 3 years ago Closed 3 years ago

Maximize(Restore) window button does not work on Windows 7/8.1

Categories

(Core :: Widget: Win32, defect)

Firefox 94
Desktop
Windows 7
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- verified

People

(Reporter: emk, Assigned: emk)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1729749 +++

Steps to Reproduce:

  1. Open Nightly
  2. Click Maximize/Restore Button

Actual Results:
Nothing happens.
Double click on draggable area works as expected.

Expected Results:
Window should be resized.

Windows 7/8.1 uses the system buttons even if the system title bar is disabled. mWindowButtonsRect holds the button area when the system buttons are used.
https://searchfox.org/mozilla-central/rev/1761c710b035d7dc8892dfa8e56589b4e095221f/widget/windows/nsWindow.cpp#4216-4232

Windows 7/8.1 uses the system buttons even if the system title bar is disabled. mWindowButtonsRect holds the button area when the system buttons are used.

Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Summary: Maximize(Restore) button does not work on Windows 7/8.1 → Maximize(Restore) window button does not work on Windows 7/8.1
Pushed by VYV03354@nifty.ne.jp: https://hg.mozilla.org/integration/autoland/rev/33ac1420d915 Do not handle WM_NCLBUTTONDOWN if the system buttons are used. r=handyman
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

Reproduced the issue on Windows 8.1 x64 with Fx Nightly(2021-09-10).
Verified as fixed with Windows 8.1 x64 and Windows 7 x64 Firefox Nightly 95.0a1 and Fx 94.0b4.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: