Bug 1730312 - Do not handle WM_NCLBUTTONDOWN if the system buttons are used. r=handyman

Windows 7/8.1 uses the system buttons even if the system title bar is disabled.
`mWindowButtonsRect` holds the button area when the system buttons are used.

Differential Revision: https://phabricator.services.mozilla.com/D125308