widget/windows/nsWindow.cpp
@@ -5929,7 +5929,7 @@ bool nsWindow::ProcessMessage(UINT msg, WPARAM& wParam, LPARAM& lParam,
 
       // WM_NCHITTEST handles HTMAXBUTTON so we need to handle clicks here.
       // WM_LBUTTONDOWNs will not be sent for this region.
-      if (wParam == HTMAXBUTTON && mCustomNonClient) {
+      if (wParam == HTMAXBUTTON && mCustomNonClient && !mWindowButtonsRect) {
         DispatchMouseEvent(eMouseDown, wParam, lParamToClient(lParam), false,
                            MouseButton::ePrimary, MOUSE_INPUT_SOURCE());
         DispatchPendingEvents();
